# sorrek-salesforce

./: .gitignore  LICENSE.txt  README.md  README.rst  app.py  pyproject.toml  requirements.txt
app/: __init__.py  app.py
sorrek-salesforce/: __version__.py
src/: __version__.py
src/sorrek_salesforce/: __version__.py
